Bug 258646 - Crash under WebAuthenticatorCoordinatorProxy::isUserVerifyingPlatformAuthenticatorAvailable(WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&)
Summary: Crash under WebAuthenticatorCoordinatorProxy::isUserVerifyingPlatformAuthenti...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-28 14:59 PDT by Chris Dumez
Modified: 2023-06-28 16:20 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-06-28 14:59:41 PDT
Crash under WebAuthenticatorCoordinatorProxy::isUserVerifyingPlatformAuthenticatorAvailable(WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&):
50 WTF::Function<void (bool)>::operator()(bool) const <==
        50 WTF::CompletionHandler<void (bool)>::operator()(bool)
          50 WebKit::WebAuthenticatorCoordinatorProxy::isUserVerifyingPlatformAuthenticatorAvailable(WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&)
            50 auto void IPC::callMemberFunction<WebKit::WebAuthenticatorCoordinatorProxy, WebKit::WebAuthenticatorCoordinatorProxy, void (WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&), std::__1::tuple<WebCore::SecurityOriginData>, void (bool)>(WebKit::WebAuthenticatorCoordinatorProxy*, void (WebKit::WebAuthenticatorCoordinatorProxy::*)(WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&), std::__1::tuple<WebCore::SecurityOriginData>&&, WTF::CompletionHandler<void (bool)>&&)::'lambda'(auto&&...)::operator()<WebCore::SecurityOriginData>(auto&&...) const
Comment 1 Chris Dumez 2023-06-28 14:59:48 PDT
<rdar://110384303>
Comment 2 Chris Dumez 2023-06-28 15:02:09 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15382
Comment 3 EWS 2023-06-28 16:20:28 PDT
Committed 265600@main (de109a5e7580): <https://commits.webkit.org/265600@main>

Reviewed commits have been landed. Closing PR #15382 and removing active labels.