Crash under WebAuthenticatorCoordinatorProxy::isUserVerifyingPlatformAuthenticatorAvailable(WebCore::SecurityOriginData const&, WTF::CompletionHandler<void (bool)>&&) https://bugs.webkit.org/show_bug.cgi?id=258646 rdar://110384303

Reviewed by J Pascoe.

Add missing early return in this function. Otherwise, we may end up calling
the handler CompletionHandler twice and we'll crash the second time. This
is because CompletionHandler null themselves out when they get called, since
they're meant to only be called once.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:

Canonical link: https://commits.webkit.org/265600@main